# Duplicated-Video

./: .gitignore  Makefile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
conf/nginx/: nginx.conf
data/: embeddings.pt  embeddings_uuid.csv
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/triton/: Dockerfile
duplicates/backend/: main.py
duplicates/backend/api/: __init__.py  base.py  check_video_duplicate.py  convert_url_to_tenzor.py  upload_video.py  utils.py  video_link_request.py  video_link_response.py
duplicates/backend/consumer/: app.py
duplicates/backend/consumer/handlers/: handler.py
duplicates/backend/consumer/handlers/utils/: utils.py  video_transform.py
duplicates/backend/task_api/: __init__.py  check_video_duplicate.py  video_link_request.py  video_link_response.py
duplicates/backend/web/: app.py
duplicates/backend/web/api/v1/: handler.py  request_model.py  response_model.py
duplicates/backend/web/api/v2/: base.py  handler.py  utils.py
duplicates/backend/web/storage/: db.py
duplicates/frontend/src/: index.css
duplicates/frontend/src/components/file_uploader/: FileUploader.jsx
duplicates/frontend/src/components/main/: MainPage.jsx
duplicates/frontend/src/components/modal/: ExampleModal.js
duplicates/frontend/src/components/responseInfo/: ResponseInfo.jsx
duplicates/frontend/src/components/serverErrorToast/: ServerErrorToast.jsx
duplicates/frontend/src/components/videoLinkInput/: VideoLinkInput.jsx
duplicates/frontend/src/components/videoPlayer/: VideoPlayer.jsx  style.css
duplicates/frontend/src/components/zip_uploader/: ZipUploader.jsx
duplicates/triton/models/video-embedder/: config.pbtxt
duplicates/triton/models/video-embedder/1/: model.pt
notebooks/ML/: Convert-MViT-Copy1.ipynb  Convert-MViT-multi.ipynb  Convert-MViT.ipynb  Convert.ipynb  Train head.ipynb  VectorDB.ipynb
notebooks/ML/misc/: download.py  embeddings.py  predict.py  utils.py  utils_mvit.py
tests/: test_project.py
