[tool.poetry]
name = "duplicated_video"
version = "0.1.0"
description = "Решение осеннего хакатона - 2024."
authors = [
    "Donskoi Andrei <donskoi.ae@gmail.com>",
    "Artem Medvedev <artiebears@mail.ru>",
    "Ali Ramazanov <ali_ramazanov_2000@mail.ru>",
    "Ivan Butakov <vanessbut@yandex.ru>",
    "Timofei Schcudro <t.shshudro@alumni.nsu.ru>",
]
packages = [
    { include = "duplicates/backend", from = "." },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
torch = "^2.1.1"
plotly = "^5.18.0"
pytest = "^8.1.1"
fastapi = "^0.110.1"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
lint.select = [
    "E",  # Ошибка стиля
    "W",  # Предупреждения по стилю
    "I",  # Корректировка импортов (аналог isort)
    "F",  # Аналог PyFlake
]